--- a/app.json
+++ b/app.json
@@ -21,7 +21,9 @@
         "NSMicrophoneUsageDescription": "This app needs microphone access to record audio with your vlogs.",
         "NSPhotoLibraryUsageDescription": "This app needs photo library access to save your recorded vlogs.",
         "NSLocationWhenInUseUsageDescription": "This app needs location access to capture GPS coordinates during check-ins only.",
-        "UIBackgroundModes": ["remote-notification"],
+        "UIBackgroundModes": [
+          "remote-notification"
+        ],
         "ITSAppUsesNonExemptEncryption": false
       }
     },
@@ -39,7 +41,11 @@
         "android.permission.ACCESS_COARSE_LOCATION",
         "android.permission.READ_MEDIA_IMAGES",
         "android.permission.READ_MEDIA_VIDEO",
-        "android.permission.WRITE_EXTERNAL_STORAGE"
+        "android.permission.WRITE_EXTERNAL_STORAGE",
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.READ_MEDIA_VISUAL_USER_SELECTED",
+        "android.permission.ACCESS_MEDIA_LOCATION",
+        "android.permission.READ_MEDIA_AUDIO"
       ],
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
@@ -98,8 +104,10 @@
     },
     "extra": {
       "eas": {
-        "projectId": "your-project-id-here"
-      }
-    }
+        "projectId": "c7b9455d-3100-473e-97fc-0e68d1208431"
+      },
+      "router": {}
+    },
+    "owner": "bloggerwang1217"
   }
 }
